# tinycudann-perf

./: .gitignore  Cargo.toml  flake.nix  plot.py  requirements.txt  test.py
src/: main.rs
