[package]
name = "tcnn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
half = "2.4.0"
hephaestus-jit = { git = "https://github.com/DoeringChristian/hephaestus-jit.git", branch = "tinycudann" }
serde = { version = "1.0", features = ["derive"]}
serde-pickle = "1.0"
